--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,7 +498,7 @@ hr {
 
 .top-box {
     width: 100%;
-    height: 240px;
+    height: 280px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     background: #fff;
@@ -547,7 +547,7 @@ hr {
     align-items: center;
     justify-content: center;
     position: relative;
-    bottom: 23px;
+    bottom: 10px;
     font-size: 13px;
     font-weight: 600;
 }
@@ -586,6 +586,7 @@ hr {
     color: #fff;
     font-size: 12px;
     font-weight: 600;
+    line-height: 30px;
 }
 
 .create-post {
